<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFiles.SearchActivity">

    <Toolbar
        android:id="@+id/viewtoolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#E453AEF6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backHome"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/back" />

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:background="@drawable/searchedittext"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="Search"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="#AE636363"
                android:textSize="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/searchBtn"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/intro_signin"
                android:text="SEARCH"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </LinearLayout>
    </Toolbar>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/viewtoolbar"
        android:layout_marginTop="70dp"
        android:padding="10dp" />

</FrameLayout>