...
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/done"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:src="@drawable/done"/>

            <LinearLayout
                android:layout_width="wrap_content"
...
                    android:textSize="24dp"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileimage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/black"
...
                android:textColor="@color/black"
                android:textSize="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/profileUsername"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="#AE636363"
                android:background="@drawable/edittextshape"/>
...
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="50dp"
                    android:id="@+id/profileHistory"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:text="Your Orders"
                    android:textColor="@color/black"
                    android:textSize="22dp"
                    android:fontFamily="sans-serif"
                    android:background="@drawable/profile_shape"/>

                <Space
...
