...
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/home_layout"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
...
                    android:background="@color/white"
                    android:backgroundTint="@color/white">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/shapes1"
                        android:background="@color/white"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

            <ListView
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/productslist"
                android:nestedScrollingEnabled="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewallProducts"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_marginRight="20dp"
                android:text="VIEW ALL"
                android:textSize="15dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"/>

        </LinearLayout>

...
